<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_rosplugin</name>
  <version>1.7.0</version>
  <description>
    A Choreonoid plugin for working with ROS
  </description>
  <maintainer email="s.nakaoka@gmail.com">Shin'ichiro Nakaoka</maintainer>
  <license>MIT</license>
  <author email="s.nakaoka@gmail.com">Shin'ichiro Nakaoka</author>
  <url type="website">http://choreonoid.org</url>
  <url type="repository">https://choreonoid.org/git/rosplugin.git</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <!-- trajectory controller -->
  <depend>realtime_tools</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>angles</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>
  <!-- -->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
